# observability_project

./: pyproject.toml
src/: main.py
